--- a/HR.LeaveManagement.Identity/HR.LeaveManagement.Identity.csproj
+++ b/HR.LeaveManagement.Identity/HR.LeaveManagement.Identity.csproj
@@ -8,10 +8,10 @@
 
   <ItemGroup>
     <Folder Include="Configuration\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.6">
