--- a/Hr.LeaveManagement.Api/appsettings.json
+++ b/Hr.LeaveManagement.Api/appsettings.json
@@ -13,5 +13,11 @@
   "ConnectionStrings": {
     "HrDatabaseConnectionString": "Server=(localdb)\\mssqllocaldb;Database=db_hr_leavemanagement;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "JwtSettings": {
+    "Audience": "HRLeaveManagementUser",
+    "DurationInMinutes": 60,
+    "Issuer": "HRLeaveManagement.Api",
+    "Key": "SECRET_JWT_KEY_HERE" // In practice, use User Secrets in Visual Studio or Azure Key Vault
+  }
   "AllowedHosts": "*"
 }
