Change AuthService to use IOptions in constructor instead of JwtSettings directly

--- a/Hr.LeaveManagement.Api/appsettings.json
+++ b/Hr.LeaveManagement.Api/appsettings.json
@@ -14,10 +14,10 @@
     "HrDatabaseConnectionString": "Server=(localdb)\\mssqllocaldb;Database=db_hr_leavemanagement;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "JwtSettings": {
-    "Audience": "HRLeaveManagementUser",
-    "DurationInMinutes": 60,
+    "Key": "SECRET_JWT_KEY_HERE", // In practice, use User Secrets in Visual Studio or Azure Key Vault
     "Issuer": "HRLeaveManagement.Api",
-    "Key": "SECRET_JWT_KEY_HERE" // In practice, use User Secrets in Visual Studio or Azure Key Vault
-  }
+    "Audience": "HRLeaveManagementUser",
+    "DurationInMinutes": 60
+  },
   "AllowedHosts": "*"
 }
